<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CursoActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="393dp"
        android:layout_height="95dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RadioButton
            android:id="@+id/bccRBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bcc"/>

        <RadioButton
            android:id="@+id/lcRBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lc" />

        <RadioButton
            android:id="@+id/bsiRBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bsi" />
    </RadioGroup>

    <Button
        android:id="@+id/selectBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="340dp"
        android:text="@string/select_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>